--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxt/content": "^1.14.0",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/composition-api": "^0.27.0",
+    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/pwa": "^3.3.5",
     "@openapitools/openapi-generator-cli": "^2.3.10",
     "core-js": "^3.15.1",
