--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,11 @@ on:
 jobs:
   ci:
     runs-on: ${{ matrix.os }}
+    env:
+      USE_STUB: "true"
+      STUB_PATH: http://localhost:8000
+      API_PATH: http://localhost:3000
+
 
     strategy:
       matrix:
@@ -22,7 +27,8 @@ jobs:
     steps:
       - name: Checkout 🛎
         uses: actions/checkout@master
-
+      - name: docker-up
+        uses: docker-compose up
       - name: Setup node env 🏗
         uses: actions/setup-node@v2.4.0
         with:
