--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Checkout 🛎
         uses: actions/checkout@master
       - name: docker-up
-        run: docker-compose up
+        run: docker-compose up -d
       - name: Setup node env 🏗
         uses: actions/setup-node@v2.4.0
         with:
