--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,5 +54,8 @@ jobs:
       - name: Run linter 👀
         run: yarn lint
 
+      - name: Run generate 🧪
+        run: yarn generate
+
       - name: Run tests 🧪
         run: yarn test
