--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,8 +54,8 @@ jobs:
       - name: Run linter 👀
         run: yarn lint
 
-      - name: Run dev 🧪
-        run: yarn dev
+      - name: Run build 🧪
+        run: yarn build
 
       - name: Run tests 🧪
         run: yarn test
