--- a/package.json
+++ b/package.json
@@ -47,8 +47,11 @@
     "eslint-plugin-vue": "^7.12.1",
     "husky": "^7.0.1",
     "jest": "^27.0.5",
+    "jest-transform-stub": "^2.0.0",
     "lint-staged": "^11.1.2",
     "prettier": "^2.3.2",
+    "sass": "^1.38.0",
+    "sass-loader": "10",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^22.0.0",
